# SDF_cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: test_sdf.cpp
data/: cube.ply  david.ply
includes/: compute_sdf.h
src/: compute_sdf.cu
utils/: print_tensor.h
utils/IO/: readPLY.h  structures.h  tinyply.h  writePLY.h
